--- a/index.ipynb
+++ b/index.ipynb
@@ -57,10 +57,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8934ac33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# quick plot: actual vs predicted (last 100 points)\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m nplot \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m(\u001b[38;5;241m100\u001b[39m, \u001b[38;5;28mlen\u001b[39m(y_test))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m nplot \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m      5\u001b[0m     idx \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(y_test)))[:nplot]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'y_test' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# quick plot: actual vs predicted (last 100 points)\n",
     "import matplotlib.pyplot as plt\n",
@@ -85,7 +97,9 @@
    "id": "855142dc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#jdsfsja,dlfjasl;dfjfjasd;lfjasd;lfjasd;lfjasd;lfjasd;"
+   ]
   },
   {
    "cell_type": "code",
