Add cleaned data, trained models, and visualization PNGs; update training script

--- a/index.ipynb
+++ b/index.ipynb
@@ -33,6 +33,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7971ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading the dataset\n",
+    "df = "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3cefe1aa",
    "metadata": {},
